# robotaksi-gazebo

./: README.md  ackermann.sdf  run.sh  setup.sh  yeni beni oku
dir/: building_robot.sdf  camera.sdf  driving.sdf
dir/gazebo/worlds/: simulation.world
dir/harita/: model.sdf
dir/models/bariyer/: model.sdf
dir/models/durak/meshes/: kare_tabela.dae
dir/models/girilmez/: model.config  model.sdf
dir/models/harita/: model.config
dir/models/lamba/: model.sdf
dir/models/saga_donulmez/: model.sdf
dir/models/saga_donus/meshes/: tabela.dae
harita/: model.config  model.sdf
harita/meshes/: harita.mtl
harita2/: model.config  model.sdf
harita2/meshes/: harita2.mtl
models/: camera.sdf  deneme.sdf
models/bariyer/: model.config
models/durak/: model.config  model.sdf
models/harita/: model.sdf
models/harita/meshes/: model.dae
models/işaretler/durak/meshes/: kare_tabela.dae
models/işaretler/noparking/meshes/: noparking.mtl
models/işaretler/saga_donus/: model.sdf
models/işaretler/sola_donus/meshes/: tabela.dae
models/işaretler/traffic_light_demo/: CMakeLists.txt
models/işaretler/traffic_light_demo/models/: traffic_light.sdf
models/işaretler/traffic_light_demo/world/: traffic_light_world.sdf
models/lamba/: model.config
models/lamba/meshes/: model.dae
models/sola_donulmez/: model.sdf
noparking/: model.sdf
prius_hybrid/: model.sdf
robotaksi-gazebo-master/models/: camera.sdf
robotaksi-gazebo-master/models/harita2/: model.sdf
traffic_green/meshes/: traffic_green.mtl
yesparking/: model.sdf
yesparking/meshes/: engel.mtl
(+17 files in other folders)
